makko/kube-system/hubble/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hubble-relay-svc
  namespace: kube-system # Retaining the namespace as it's part of the service's identity
spec:
  selector:
    k8s-app: hubble-relay
  ports:
  - protocol: TCP
    port: 4245
    targetPort: 4245
  type: ClusterIP
