makko/kube-system/hubble/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-relay
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "hubble.senk0.com"
  rules:
    - backendRefs:
        - name: hubble-relay
          port: 80
